package languageidentification;

option java_package = "jp.go.nict.langrid.client.protobuf.proto";
option java_outer_classname = "LanguageIdentificationProtos";

import "common.proto";

message LanguageAndEncoding {
  required string language = 1;
  optional string encoding = 2;
}

message IdentifyRequest {
  repeated Header headers = 1;
  required string text = 2;
  required string originalEncoding = 3;
}

message IdentifyResponse {
  repeated Header headers = 1;
  optional Fault fault = 2;
  optional string result = 3;
}

message IdentifyLanguageAndEncodingRequest {
  repeated Header headers = 1;
  required bytes textBytes = 2;
}

message IdentifyLanguageAndEncodingResponse {
  repeated Header headers = 1;
  optional Fault fault = 2;
  optional LanguageAndEncoding result = 3;
}

message GetSupportedLanguagesRequest{
  repeated Header headers = 1;
}

message GetSupportedLanguagesResponse{
  repeated Header headers = 1;
  optional Fault fault = 2;
  repeated string results = 3;
}

message GetSupportedEncodingsRequest{
  repeated Header headers = 1;
}

message GetSupportedEncodingsResponse{
  repeated Header headers = 1;
  optional Fault fault = 2;
  repeated string results = 3;
}

service Service{
  rpc identify(IdentifyRequest) returns (IdentifyResponse);
  rpc identifyLanguageAndEncoding(IdentifyLanguageAndEncodingRequest) returns (IdentifyLanguageAndEncodingResponse);
  rpc getSupportedLanguages(GetSupportedLanguagesRequest) returns (GetSupportedLanguagesResponse);
  rpc getSupportedEncodings(GetSupportedEncodingsRequest) returns (GetSupportedEncodingsResponse);
}
